--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 				</div>
 
 				<!-- mob menu button -->
-				<div class="mob_menu_button_wrapper col-xs-offset-2 col-xs-4">
+				<div class="mob_menu_button_wrapper col-xs-4">
 					<a href="#" class="mob_menu_button">Меню</a>
 				</div>
 				<!-- mob menu button -->
