--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
 					<img src="../img/ic_close.svg" alt=""/>
 				</a>
 
-				<nav class="col-sm-4 col-md-3">
+				<nav class="head_nav col-sm-4 col-md-3">
 					<a href="#">Главная</a>
 					<a href="#">Каталог</a>
 					<a href="#">Цены</a>
@@ -180,7 +180,7 @@
 			<div class="row">
 
 					<h1 col-md-12>Как мы работаем</h1>
-					<div class="col-sm-offset-3 col-sm-6 col-md-4">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 								<div class="img_wrapper">
@@ -195,7 +195,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-offset-3 col-sm-6 col-md-4">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -210,7 +210,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-offset-3 col-sm-6 col-md-4">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -225,7 +225,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-offset-3 col-sm-6 col-md-4">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -250,7 +250,7 @@
 			<div class="row">
 
 					<h1 col-md-12>Почему выберают нас</h1>
-					<div class="col-md-3">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -265,7 +265,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -280,7 +280,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -295,7 +295,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
 						<div class="item_vertical">
 
 							<div class="img_wrapper">
@@ -324,26 +324,32 @@
 				<dl class="accordion">
 
 					<dt>
-
 						<a href="">Panel 2
 							<span class="arrow_wrapper">
 								<img src="../img/ic_arrow.svg" class=""/>
 							</span>
 						</a>
-
 					</dt>
+
 					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
 		      <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl quam, convallis ac lacus vel, mollis bibendum ante.</dd>
 
 		      <dt>
 						<a href="">Panel 2</a>
+						<span class="arrow_wrapper">
+							<img src="../img/ic_arrow.svg" class=""/>
+						</span>
 					</dt>
 		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
 		      <dt>
 						<a href="">Panel 3</a>
+						<span class="arrow_wrapper">
+							<img src="../img/ic_arrow.svg" class=""/>
+						</span>
 					</dt>
+
 		      <dd>Laoreet quis, auctor in orci. Ut gravida nibh vitae lorem egestas, vel commodo mi gravida. Curabitur elementum dolor id lacus.</dd>
 		    </dl>
 
@@ -357,7 +363,7 @@
 
 					<h1 col-md-12>Статистика компании</h1>
 					<div class="col-md-4">
-						<div class="num_doors content">
+						<div class="content">
 
 							<h1>3662</h1>
 							<p>Дверей изготовлено</p>
@@ -365,15 +371,15 @@
 						</div>
 		      </div>
 					<div class="col-md-4">
-						<div class="num_clients content">
+						<div class="content">
 
 							<h1>768</h1>
 							<p>Клиентов обслужено</p>
 
 						</div>
 		      </div>
-					<div class="col-md-4">
-						<div class="num_years content">
+					<div class="item_vertical col-md-4">
+						<div class="content">
 
 							<h1>20</h1>
 							<p>Лет на рынке</p>
@@ -413,14 +419,14 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
 							</p>
 						</div>
-						<div class="review_item col-md-4">
+						<div class="review_item hidden-xs hidden-sm col-md-4">
 							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
 							<h3>Сергей</h3>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
 							</p>
 						</div>
-						<div class="review_item col-md-4">
+						<div class="review_item hidden-xs hidden-sm col-md-4">
 							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
 							<h3>Сергей</h3>
 							<p>
@@ -438,12 +444,12 @@
 
 		<div class="foo_top container">
 
-			<div class="bottom_logo_wrapper col-md-3">
+			<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
 				<a href="#" class="logo_black">
 				</a>
 			</div>
 
-			<nav class="foo_nav_wrapper col-md-6">
+			<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
 				<a href="#">Главная</a>
 				<a href="#">Каталог</a>
 				<a href="#">Цены</a>
@@ -451,7 +457,7 @@
 				<a href="#">Контакты</a>
 			</nav>
 
-			<div class="social_icons_wrapper col-md-3">
+			<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
 
 				<div class="social_icons">
 
@@ -471,13 +477,13 @@
 
 		<div class="foo_bottom container">
 
-			<div class="rights col-md-4">
+			<div class="rights col-xs-12 col-sm-4 col-md-4">
 				<p>© 2016 Woodoors<br>
 						Все права защищены<br>
 						Создание и поддержка Ilya Zoria Studio</p>
 			</div>
 
-			<div class="location_wrapper col-md-4">
+			<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
 
 				<div class="location">
 
@@ -492,7 +498,7 @@
 
 			</div>
 
-			<div class="bottom_phone_wrapper col-md-4">
+			<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
 
 				<div class="bottom_phone">
 
