--- a/app/index.html
+++ b/app/index.html
@@ -64,15 +64,15 @@
 					</a>
 				</div>
 
-				<!-- mob menu button -->
-				<div class="mob_menu_button_wrapper col-xs-4">
+				<!-- mob menu -->
+				<div class="mob_menu_button_wrapper">
 					<a href="#" class="mob_menu_button">Меню</a>
 				</div>
-				<!-- mob menu button -->
 
 				<a href="#" class="close_icon">
 					<img src="../img/ic_close.svg" alt=""/>
 				</a>
+				<!-- mob menu end -->
 
 				<nav class="head_nav col-sm-4 col-md-3">
 					<a href="#">Главная</a>
@@ -82,7 +82,7 @@
 					<a href="#">Контакты</a>
 				</nav>
 
-				<div class="phone_wrapper hidden-xs hidden-sm col-md-3">
+				<div class="phone_wrapper col-md-3">
 
 					<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
 
@@ -324,29 +324,27 @@
 				<dl class="accordion">
 
 					<dt>
-						<a href="">Panel 2
-							<span class="arrow_wrapper">
-								<img src="../img/ic_arrow.svg" class=""/>
-							</span>
-						</a>
+						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
+						<span class="arrow">
+							<img src="../img/ic_arrow.svg"/>
+						</span>
 					</dt>
 
 					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
-		      <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl quam, convallis ac lacus vel, mollis bibendum ante.</dd>
-
 		      <dt>
-						<a href="">Panel 2</a>
-						<span class="arrow_wrapper">
-							<img src="../img/ic_arrow.svg" class=""/>
+						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
+						<span class="arrow">
+							<img src="../img/ic_arrow.svg"/>
 						</span>
 					</dt>
+
 		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
 
 		      <dt>
-						<a href="">Panel 3</a>
-						<span class="arrow_wrapper">
-							<img src="../img/ic_arrow.svg" class=""/>
+						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
+						<span class="arrow">
+							<img src="../img/ic_arrow.svg"/>
 						</span>
 					</dt>
 
