--- a/app/contacts.html
+++ b/app/contacts.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-	<div class="head_wrapper_lp">
+	<div class="contacts_wrapper">
 
 		<header>
 			<div class="container">
@@ -102,421 +102,132 @@
 			</div>
 		</header>
 
-		<div class="head_content_wrapper">
-
-			<h1 class="header_title">Изготовляем двери, кухни,<br> лестницы и мебель из<br> натурального дерева</h1>
-
-		</div>
-
-		<img src="../img/ic_mouse.svg" class="scroll_mouse">
-
-	</div>
-
-	<div class="our_profile">
 		<div class="container">
-			<div class="row">
 
-				<h1 col-md-12>Наш профиль</h1>
+      <div class="contact_form">
 
-				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
-          <div class="item_vertical">
+        <div class="contact_form_wrapper">
 
-						<div class="img_wrapper">
-							<img src="../img/ic_doors.svg" class="img_lp">
-						</div>
+    			<h1>Контакты</h1>
 
-						<div class="content">
+          <p>Наш адрес:<br>Украина, г.Тараща,<br>ул. Степовая, 15a</p>
 
-							<h3>Межкомнатные и входные двери</h3>
+          <p>Телефоны:<br>+38 (097) 240-00-30<br>+38 (044) 279-79-87</p>
 
-							<p style="margin-bottom: 30px;">Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
+          <p>Електронная почта:<br>woodoors@gmail.com</p>
 
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+          <div class="social_icons_wrapper">
 
-						</div>
-          </div>
-	      </div>
+    				<div class="social_icons">
 
-				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
-          <div class="item_vertical">
+    					<a href="https://vk.com/">
+    						<img src="../img/ic_vk_white.svg" class="ic_vk">
+    					</a>
 
-						<div class="img_wrapper">
-              <img src="../img/ic_furniture.svg" class="img_lp">
-						</div>
+    					<a href="https://facebook.com">
+    						<img src="../img/ic_fb_white.svg" class="ic_fb">
+    					</a>
 
-						<div class="content">
+    				</div>
+    			</div>
 
-							<h3>Мебель</h3>
-							<p style="margin-bottom: 30px;">Кухни, гостиные комнаты, спальни, стенки, шкафы, столы, стулья, детские кровати</p>
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
-
-						</div>
-          </div>
-	      </div>
-
-				<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
-          <div class="item_vertical">
-
-						<div class="img_wrapper">
-							<img src="../img/ic_stairs.svg" class="img_lp">
-						</div>
-
-						<div class="content">
-
-							<h3>Лестницы</h3>
-							<p style="margin-bottom: 30px;">Изготавливаются только из высококачественного дерева по индивидуальному заказу</p>
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
-
-						</div>
-          </div>
-	      </div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="how_we_work">
-		<div class="container">
-			<div class="row">
-
-					<h1 col-md-12>Как мы работаем</h1>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-								<div class="img_wrapper">
-									<img src="../img/ic_old_phone.svg" class="img_lp">
-								</div>
-
-							<div class="content">
-
-								<h3>Консультация по телефону</h3>
-								<p>Наш менеджер вам перезвонит и ответит на все интересующие вас вопросы</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_measure.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Выезд на замер</h3>
-								<p>Мастер выедет к вам домой, чтобы точно произвести замер, учитывая все сложности ремонта, проконсультирует и поможет правильно подобрать модель</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_manufacture.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Изготовление изделия</h3>
-								<p>Наши специалисты изготавливают изделие в течении 5-15 дней</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_delivery.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Доставка и монтаж изделия</h3>
-								<p>Мы доставляем заказ сами в Киев и Киевскую область, по Украине - Новой почтой</p>
-
-							</div>
-						</div>
-					</div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="why_we">
-		<div class="container">
-			<div class="row">
-
-					<h1 col-md-12>Почему выберают нас</h1>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_individual_project.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Индивидуальный проект</h3>
-								<p>Мы изготовляем изделия любой сложности только под заказ учитывая пожелания каждого клиента</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_wood.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Только натуральное дерево</h3>
-								<p>Все изделия изготавливаются только с высококачественных пород дерева (дуб, ясень, клён, сосна, липа)</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_guarantee.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Гарантия 5 лет</h3>
-								<p>Мы дорожим нашими клиентами поэтому гарантируем высокое качество наших изделий</p>
-
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-0">
-						<div class="item_vertical">
-
-							<div class="img_wrapper">
-								<img src="../img/ic_20.svg" class="img_lp">
-							</div>
-
-							<div class="content">
-
-								<h3>Более 20 лет на рынке</h3>
-								<p>Большой опыт работы с заказами самой разной сложности</p>
-
-							</div>
-						</div>
-					</div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="faq">
-		<div class="container">
-			<div class="row">
-
-				<h1 col-md-12>Часто задаваемые вопросы</h1>
-
-				<dl class="accordion">
-
-					<dt>
-						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
-						<span class="arrow">
-							<img src="../img/ic_arrow.svg"/>
-						</span>
-					</dt>
-
-					<dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
-
-		      <dt>
-						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
-						<span class="arrow">
-							<img src="../img/ic_arrow.svg"/>
-						</span>
-					</dt>
-
-		      <dd>Suspendisse potenti. In ullamcorper posuere nibh, in pretium metus porttitor vitae. Aenean felis libero, condimentum sagittis.</dd>
-
-		      <dt>
-						<a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a>
-						<span class="arrow">
-							<img src="../img/ic_arrow.svg"/>
-						</span>
-					</dt>
-
-		      <dd>Laoreet quis, auctor in orci. Ut gravida nibh vitae lorem egestas, vel commodo mi gravida. Curabitur elementum dolor id lacus.</dd>
-		    </dl>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="statistic">
-		<div class="container">
-			<div class="row">
-
-					<h1 col-md-12>Статистика компании</h1>
-					<div class="col-md-4">
-						<div class="content">
-
-							<h1>3662</h1>
-							<p>Дверей изготовлено</p>
-
-						</div>
-		      </div>
-					<div class="col-md-4">
-						<div class="content">
-
-							<h1>768</h1>
-							<p>Клиентов обслужено</p>
-
-						</div>
-		      </div>
-					<div class="item_vertical col-md-4">
-						<div class="content">
-
-							<h1>20</h1>
-							<p>Лет на рынке</p>
-
-						</div>
-		      </div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="order_bottom_block">
-		<div class="container">
-			<div class="row">
-
-				<h1>Закажи консультацию нашего<br> мастера прямо сейчас</h1>
-				<p>Получи скидку 5% на первый заказ</p>
-
-				<div class="form_wrapper">
-					<form action="">
-
-				    <input type="text" class="name" name="name" placeholder="Ваше имя">
-
-				    <input type="text" class="phone" name="phone" placeholder="Ваш телефон">
-
-				    <input type="submit" value="Перезвоните мне">
-
-				  </form>
-				</div>
-
-					<div class="reviews">
-
-						<div class="review_item col-md-4">
-							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-							<h3>Сергей</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-							</p>
-						</div>
-						<div class="review_item hidden-xs hidden-sm col-md-4">
-							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-							<h3>Сергей</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-							</p>
-						</div>
-						<div class="review_item hidden-xs hidden-sm col-md-4">
-							<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-							<h3>Сергей</h3>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-							</p>
-						</div>
-
-					</div>
-
-			</div>
-		</div>
-	</div>
-
-	<footer>
-
-		<div class="foo_top container">
-
-			<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
-				<a href="#" class="logo_black">
-				</a>
-			</div>
-
-			<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-				<a href="#">Главная</a>
-				<a href="#">Каталог</a>
-				<a href="#">Цены</a>
-				<a href="#">Статьи</a>
-				<a href="#">Контакты</a>
-			</nav>
-
-			<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
-
-				<div class="social_icons">
-
-					<a href="https://vk.com/">
-						<img src="../img/ic_vk.svg" class="ic_vk">
-					</a>
-
-					<a href="https://facebook.com">
-						<img src="../img/ic_fb.svg" class="ic_fb">
-					</a>
-
-				</div>
-
-			</div>
-
+        </div>
+      </div>
 		</div>
 
-		<div class="foo_bottom container">
+		<div id="map"></div>
 
-			<div class="rights col-xs-12 col-sm-4 col-md-4">
-				<p>© 2016 Woodoors<br>
-						Все права защищены<br>
-						Создание и поддержка Ilya Zoria Studio</p>
-			</div>
+  </div>
 
-			<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
+  <script>var scr = {"scripts":[
+    {"src" : "js/libs.min.js", "async" : false},
+    {"src" : "js/common.js", "async" : false}
+    ]};!function(t,n,r){"use strict";var c=function(t){if("[object Array]"!==Object.prototype.toString.call(t))return!1;for(var r=0;r<t.length;r++){var c=n.createElement("script"),e=t[r];c.src=e.src,c.async=e.async,n.body.appendChild(c)}return!0};t.addEventListener?t.addEventListener("load",function(){c(r.scripts);},!1):t.attachEvent?t.attachEvent("onload",function(){c(r.scripts)}):t.onload=function(){c(r.scripts)}}(window,document,scr);
+  </script>
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBz9uzaaX-x3z1NUphQjnHcbNqpTtxJXMw&sensor=false&extension=.js'></script>
 
-				<div class="location">
+  <script>
+      google.maps.event.addDomListener(window, 'load', init);
+      var map;
+      function init() {
+          var mapOptions = {
+              center: new google.maps.LatLng(49.30385,29.974903),
+              zoom: 9,
+              zoomControl: false,
+              zoomControlOptions: {
+                  style: google.maps.ZoomControlStyle.SMALL,
+              },
+              disableDoubleClickZoom: false,
+              mapTypeControl: false,
+              scaleControl: false,
+              scrollwheel: true,
+              panControl: false,
+              streetViewControl: false,
+              draggable : true,
+              overviewMapControl: false,
+              overviewMapControlOptions: {
+                  opened: false,
+              },
+              mapTypeId: google.maps.MapTypeId.ROADMAP,
+              styles: [{"featureType":"all","elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"featureType":"all","elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"featureType":"all","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":17}]}],
+          }
+          var mapElement = document.getElementById('map');
+          var map = new google.maps.Map(mapElement, mapOptions);
+          var locations = [
+  ['Office', 'undefined', 'undefined', 'undefined', 'undefined', 49.5619951, 30.497390900000028, 'https://mapbuildr.com/assets/img/markers/hollow-pin-red.png'],['Киев', 'undefined', 'undefined', 'undefined', 'undefined', 50.4501, 30.523400000000038, 'https://mapbuildr.com/assets/img/markers/ellipse-green.png']
+          ];
+          for (i = 0; i < locations.length; i++) {
+  			if (locations[i][1] =='undefined'){ description ='';} else { description = locations[i][1];}
+  			if (locations[i][2] =='undefined'){ telephone ='';} else { telephone = locations[i][2];}
+  			if (locations[i][3] =='undefined'){ email ='';} else { email = locations[i][3];}
+             if (locations[i][4] =='undefined'){ web ='';} else { web = locations[i][4];}
+             if (locations[i][7] =='undefined'){ markericon ='';} else { markericon = locations[i][7];}
+              marker = new google.maps.Marker({
+                  icon: markericon,
+                  position: new google.maps.LatLng(locations[i][5], locations[i][6]),
+                  map: map,
+                  title: locations[i][0],
+                  desc: description,
+                  tel: telephone,
+                  email: email,
+                  web: web
+              });
+  link = '';     }
+     var waypts = [];
+        directionsService = new google.maps.DirectionsService();
+        directionsDisplay = new google.maps.DirectionsRenderer({
+            suppressMarkers: true
+        });
+        if (locations.length > 1){
+            for (var i = 0; i < locations.length; i++) {
+                waypts.push({
+                    location:new google.maps.LatLng(locations[i][5], locations[i][6]),
+                    stopover:true
+                });
+            };
+            var request = {
+                origin: new google.maps.LatLng(locations[0][5], locations[0][6]),
+                destination: new google.maps.LatLng(locations[locations.length - 1][5], locations[locations.length - 1][6]),
+                waypoints: waypts,
+                optimizeWaypoints: true,
+                travelMode: google.maps.DirectionsTravelMode.DRIVING
+            };
+            directionsService.route(request, function(response, status) {
+                if (status == google.maps.DirectionsStatus.OK) {
+                    polylineOptions = {
+                        strokeColor: '#626363',
+                        strokeWeight: '1'
+                    }
+                    directionsDisplay.setOptions({
+                        polylineOptions: polylineOptions
+                    });
+                    directionsDisplay.setDirections(response);
+                }
+            });
+            directionsDisplay.setMap(map);
+         }
+  }
+  </script>
 
-					<img src="../img/ic_location.svg" class="ic_location">
-					<p>
-						Наш адрес:<br>
-						Украина, г.Тараща,<br>
-						ул. Степовая 15a
-					</p>
-
-				</div>
-
-			</div>
-
-			<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
-
-				<div class="bottom_phone">
-
-					<img src="../img/ic_cicle_phone_black.svg">
-					<ul class="phones">
-						<li>(097) 823 32 39</li>
-						<li>(097) 823 32 39</li>
-					</ul>
-
-				</div>
-			</div>
-
-		</div>
-
-	</footer>
-
-	<script>var scr = {"scripts":[
-		{"src" : "js/libs.min.js", "async" : false},
-		{"src" : "js/common.js", "async" : false}
-		]};!function(t,n,r){"use strict";var c=function(t){if("[object Array]"!==Object.prototype.toString.call(t))return!1;for(var r=0;r<t.length;r++){var c=n.createElement("script"),e=t[r];c.src=e.src,c.async=e.async,n.body.appendChild(c)}return!0};t.addEventListener?t.addEventListener("load",function(){c(r.scripts);},!1):t.attachEvent?t.attachEvent("onload",function(){c(r.scripts)}):t.onload=function(){c(r.scripts)}}(window,document,scr);
-	</script>
 </body>
 </html>
