--- a/app/index.html
+++ b/app/index.html
@@ -44,11 +44,11 @@
 
 	<!-- Custom Browsers Color Start -->
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#000">
+	<meta name="theme-color" content="#122D2C">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#000">
+	<meta name="msapplication-navbutton-color" content="#122D2C">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#122D2C">
 	<!-- Custom Browsers Color End -->
 
 </head>
@@ -76,7 +76,7 @@
 
 				<nav class="head_nav col-sm-4 col-md-3">
 					<a href="index.html">Главная</a>
-					<a href="#">Каталог</a>
+					<a href="catalog.html">Каталог</a>
 					<a href="#">Цены</a>
 					<a href="#">Статьи</a>
 					<a href="contacts.html">Контакты</a>
@@ -131,7 +131,7 @@
 
 							<p style="margin-bottom: 30px;">Высокочественные двери из массива дерева дуба, ясеня, сосны</p>
 
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<a ="go_galery" href="catalog.html" class="second-btn">Перейти в каталог</a>
 
 						</div>
           </div>
@@ -148,7 +148,7 @@
 
 							<h3>Мебель</h3>
 							<p style="margin-bottom: 30px;">Кухни, гостиные комнаты, спальни, стенки, шкафы, столы, стулья, детские кровати</p>
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<a ="go_galery" href="catalog.html" class="second-btn">Перейти в каталог</a>
 
 						</div>
           </div>
@@ -165,7 +165,7 @@
 
 							<h3>Лестницы</h3>
 							<p style="margin-bottom: 30px;">Изготавливаются только из высококачественного дерева по индивидуальному заказу</p>
-							<a ="go_galery" href="#" class="second-btn">Перейти в галерею</a>
+							<a ="go_galery" href="catalog.html" class="second-btn">Перейти в каталог</a>
 
 						</div>
           </div>
