--- a/app/catalog.html
+++ b/app/catalog.html
@@ -66,7 +66,7 @@
 
 				<!-- mob menu -->
 				<div class="mob_menu_button_wrapper">
-					<a href="#" class="mob_menu_button">Мен ю</a>
+					<a href="#" class="mob_menu_button">Меню</a>
 				</div>
 
 				<a href="#" class="close_icon">
@@ -114,11 +114,11 @@
 	</div>
 
 	<div class="tabs_catalog">
-		<div class="container">
+		<div class="tabs_catalog_wrapper container">
 			<div class="row tabs_row">
 
-				<div class="col-md-4">
-					<div class="tab_catalog">
+				<div class="tab_catalog_wrapper">
+					<div class="tab_catalog tab_catalog_selected">
 
 						<div class="tab_icons_wrapper">
 							<img src="../img/ic_doors.svg" class="tab_icons">
@@ -134,7 +134,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4">
+				<div class="tab_catalog_wrapper">
 					<div class="tab_catalog">
 
 						<div class="tab_icons_wrapper">
@@ -151,7 +151,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4">
+				<div class="tab_catalog_wrapper">
 					<div class="tab_catalog">
 
 						<div class="tab_icons_wrapper">
@@ -167,6 +167,7 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
