--- a/app/catalog.html
+++ b/app/catalog.html
@@ -126,7 +126,8 @@
 
 						<div class="tab_content">
 
-							<h3>Межкомнатные и входные двери</h3>
+							<!-- <h3>Межкомнатные и входные двери</h3> -->
+							<h3>Межкомнатные</h3>
 
 							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
 
@@ -171,6 +172,38 @@
 			</div>
 		</div>
 	</div>
+
+	<section class="catalog_gallery container">
+
+		<div class="g_img_wrapper">
+		  <a href="#">
+		    <img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
+		  </a>
+		  <div class="g_title">Двери 1</div>
+		</div>
+
+		<div class="g_img_wrapper">
+		  <a href="#">
+		    <img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
+		  </a>
+		  <div class="g_title">Двери 1</div>
+		</div>
+
+		<div class="g_img_wrapper">
+		  <a href="#">
+		    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+		  </a>
+		  <div class="g_title">Двери 1</div>
+		</div>
+
+		<div class="g_img_wrapper">
+		  <a href="#">
+		    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+		  </a>
+		  <div class="g_title">Двери 1</div>
+		</div>
+
+	</section>
 
 	<footer>
 
