--- a/app/catalog.html
+++ b/app/catalog.html
@@ -54,232 +54,263 @@
 </head>
 <body>
 
-	<div class="head_wrapper_innerpage">
+	<div class="body_wrapper">
 
-		<header>
-			<div class="container">
+		<div class="head_wrapper_innerpage">
 
-				<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-					<a href="#" class="logo">
+			<header>
+				<div class="container">
+
+					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
+						<a href="#" class="logo">
+						</a>
+					</div>
+
+					<!-- mob menu -->
+					<div class="mob_menu_button_wrapper">
+						<a href="#" class="mob_menu_button">Меню</a>
+					</div>
+
+					<a href="#" class="close_icon">
+						<img src="../img/ic_close.svg" alt=""/>
+					</a>
+					<!-- mob menu end -->
+
+					<nav class="head_nav col-sm-4 col-md-3">
+						<a href="index.html">Главная</a>
+						<a href="catalog.html">Каталог</a>
+						<a href="#">Цены</a>
+						<a href="#">Статьи</a>
+						<a href="contacts.html">Контакты</a>
+					</nav>
+
+					<div class="phone_wrapper col-md-3">
+
+						<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+
+						<ul class="phones">
+							<li>(097) 823 32 39</li>
+							<li>(097) 823 32 39</li>
+						</ul>
+
+					</div>
+
+					<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
+
+						<input type="button" class="btn_cta" value="Заказать консультацию">
+
+					</div>
+
+				</div>
+			</header>
+
+			<div class="head_content_wrapper_with_p">
+
+				<h1 class="header_title">Каталог</h1>
+
+				<p class="disc_head_content">
+					Все изделия изготавливаются из натурального дерева из дуба, ясеня или сосны под заказ
+				</p>
+
+			</div>
+		</div>
+
+		<div class="tabs_catalog">
+			<div class="tabs_catalog_wrapper container">
+				<div class="row tabs_row">
+
+					<div class="tab_catalog_wrapper">
+						<div class="tab_catalog tab_catalog_selected">
+
+							<div class="tab_icons_wrapper">
+								<img src="../img/ic_doors.svg" class="tab_icons">
+							</div>
+
+							<div class="tab_content">
+
+								<!-- <h3>Межкомнатные и входные двери</h3> -->
+								<h3>Межкомнатные</h3>
+
+								<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="tab_catalog_wrapper">
+						<div class="tab_catalog">
+
+							<div class="tab_icons_wrapper">
+								<img src="../img/ic_furniture.svg" class="tab_icons">
+							</div>
+
+							<div class="tab_content">
+
+								<h3>Мебель</h3>
+
+								<p class="tab_small_desc">Кухни, столы, стулья, кровати, шкафы, стенки</p>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="tab_catalog_wrapper">
+						<div class="tab_catalog">
+
+							<div class="tab_icons_wrapper">
+								<img src="../img/ic_stairs.svg" class="tab_icons">
+							</div>
+
+							<div class="tab_content">
+
+								<h3>Лестницы</h3>
+
+								<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
+
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<section class="catalog_gallery container">
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+			<div class="g_img_wrapper">
+			  <a href="#">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+
+		</section>
+
+		<footer>
+
+			<div class="foo_top container">
+
+				<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
+					<a href="#" class="logo_black">
 					</a>
 				</div>
 
-				<!-- mob menu -->
-				<div class="mob_menu_button_wrapper">
-					<a href="#" class="mob_menu_button">Меню</a>
-				</div>
-
-				<a href="#" class="close_icon">
-					<img src="../img/ic_close.svg" alt=""/>
-				</a>
-				<!-- mob menu end -->
-
-				<nav class="head_nav col-sm-4 col-md-3">
-					<a href="index.html">Главная</a>
-					<a href="catalog.html">Каталог</a>
+				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
+					<a href="#">Главная</a>
+					<a href="#">Каталог</a>
 					<a href="#">Цены</a>
 					<a href="#">Статьи</a>
-					<a href="contacts.html">Контакты</a>
+					<a href="#">Контакты</a>
 				</nav>
 
-				<div class="phone_wrapper col-md-3">
+				<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
 
-					<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+					<div class="social_icons">
 
-					<ul class="phones">
-						<li>(097) 823 32 39</li>
-						<li>(097) 823 32 39</li>
-					</ul>
+						<a href="https://vk.com/">
+							<img src="../img/ic_vk.svg" class="ic_vk">
+						</a>
 
-				</div>
+						<a href="https://facebook.com">
+							<img src="../img/ic_fb.svg" class="ic_fb">
+						</a>
 
-				<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
-
-					<input type="button" class="btn_cta" value="Заказать консультацию">
+					</div>
 
 				</div>
 
 			</div>
-		</header>
 
-		<div class="head_content_wrapper_with_p">
+			<div class="foo_bottom container">
 
-			<h1 class="header_title">Каталог</h1>
+				<div class="rights col-xs-12 col-sm-4 col-md-4">
+					<p>© 2016 Woodoors<br>
+							Все права защищены<br>
+							Создание и поддержка Ilya Zoria Studio</p>
+				</div>
 
-			<p class="disc_head_content">
-				Все изделия изготавливаются из натурального дерева из дуба, ясеня или сосны под заказ
-			</p>
+				<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
 
-		</div>
+					<div class="location">
+
+						<img src="../img/ic_location.svg" class="ic_location">
+						<p>
+							Наш адрес:<br>
+							Украина, г.Тараща,<br>
+							ул. Степовая 15a
+						</p>
+
+					</div>
+
+				</div>
+
+				<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
+
+					<div class="bottom_phone">
+
+						<img src="../img/ic_cicle_phone_black.svg">
+						<ul class="phones">
+							<li>(097) 823 32 39</li>
+							<li>(097) 823 32 39</li>
+						</ul>
+
+					</div>
+				</div>
+
+			</div>
+
+		</footer>
+
 	</div>
-
-	<div class="tabs_catalog">
-		<div class="tabs_catalog_wrapper container">
-			<div class="row tabs_row">
-
-				<div class="tab_catalog_wrapper">
-					<div class="tab_catalog tab_catalog_selected">
-
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_doors.svg" class="tab_icons">
-						</div>
-
-						<div class="tab_content">
-
-							<!-- <h3>Межкомнатные и входные двери</h3> -->
-							<h3>Межкомнатные</h3>
-
-							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="tab_catalog_wrapper">
-					<div class="tab_catalog">
-
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_furniture.svg" class="tab_icons">
-						</div>
-
-						<div class="tab_content">
-
-							<h3>Мебель</h3>
-
-							<p class="tab_small_desc">Кухни, столы, стулья, кровати, шкафы, стенки</p>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="tab_catalog_wrapper">
-					<div class="tab_catalog">
-
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_stairs.svg" class="tab_icons">
-						</div>
-
-						<div class="tab_content">
-
-							<h3>Лестницы</h3>
-
-							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
-
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<section class="catalog_gallery container">
-
-		<div class="g_img_wrapper">
-		  <a href="#">
-		    <img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
-		  </a>
-		  <div class="g_title">Двери 1</div>
-		</div>
-
-		<div class="g_img_wrapper">
-		  <a href="#">
-		    <img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
-		  </a>
-		  <div class="g_title">Двери 1</div>
-		</div>
-
-		<div class="g_img_wrapper">
-		  <a href="#">
-		    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-		  </a>
-		  <div class="g_title">Двери 1</div>
-		</div>
-
-		<div class="g_img_wrapper">
-		  <a href="#">
-		    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-		  </a>
-		  <div class="g_title">Двери 1</div>
-		</div>
-
-	</section>
-
-	<footer>
-
-		<div class="foo_top container">
-
-			<div class="bottom_logo_wrapper col-xs-12 col-sm-3 col-md-3">
-				<a href="#" class="logo_black">
-				</a>
-			</div>
-
-			<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-				<a href="#">Главная</a>
-				<a href="#">Каталог</a>
-				<a href="#">Цены</a>
-				<a href="#">Статьи</a>
-				<a href="#">Контакты</a>
-			</nav>
-
-			<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
-
-				<div class="social_icons">
-
-					<a href="https://vk.com/">
-						<img src="../img/ic_vk.svg" class="ic_vk">
-					</a>
-
-					<a href="https://facebook.com">
-						<img src="../img/ic_fb.svg" class="ic_fb">
-					</a>
-
-				</div>
-
-			</div>
-
-		</div>
-
-		<div class="foo_bottom container">
-
-			<div class="rights col-xs-12 col-sm-4 col-md-4">
-				<p>© 2016 Woodoors<br>
-						Все права защищены<br>
-						Создание и поддержка Ilya Zoria Studio</p>
-			</div>
-
-			<div class="location_wrapper col-xs-12 col-sm-4 col-md-4">
-
-				<div class="location">
-
-					<img src="../img/ic_location.svg" class="ic_location">
-					<p>
-						Наш адрес:<br>
-						Украина, г.Тараща,<br>
-						ул. Степовая 15a
-					</p>
-
-				</div>
-
-			</div>
-
-			<div class="bottom_phone_wrapper col-xs-12 col-sm-4 col-md-4">
-
-				<div class="bottom_phone">
-
-					<img src="../img/ic_cicle_phone_black.svg">
-					<ul class="phones">
-						<li>(097) 823 32 39</li>
-						<li>(097) 823 32 39</li>
-					</ul>
-
-				</div>
-			</div>
-
-		</div>
-
-	</footer>
-
 	<script>var scr = {"scripts":[
 		{"src" : "js/libs.min.js", "async" : false},
 		{"src" : "js/common.js", "async" : false}
