--- a/app/contacts.html
+++ b/app/contacts.html
@@ -54,7 +54,9 @@
 </head>
 <body>
 
-	<div class="contacts_wrapper">
+	<div class="body_wrapper">
+
+		<div class="contacts_wrapper">
 
 		<header>
 			<div class="container">
@@ -140,6 +142,8 @@
     </div>
 
   </div>
+
+	</div>
 
   <script>var scr = {"scripts":[
     {"src" : "js/libs.min.js", "async" : false},
