--- a/app/catalog.html
+++ b/app/catalog.html
@@ -62,7 +62,7 @@
 				<div class="container">
 
 					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 						</a>
 					</div>
 
@@ -115,63 +115,60 @@
 			</div>
 		</div>
 
-		<div class="tabs_catalog">
-			<div class="tabs_catalog_wrapper container">
-				<div class="row tabs_row">
+		<div class="tabs_catalog_scroll">
+			<div class="tabs_catalog">
 
-					<div class="tab_catalog_wrapper">
-						<div class="tab_catalog tab_catalog_selected">
+				<div class="tab_wrapper">
+					<div class="tab tab_selected">
 
-							<div class="tab_icons_wrapper">
-								<img src="../img/ic_doors.svg" class="tab_icons">
-							</div>
+						<div class="tab_icons_wrapper">
+							<img src="../img/ic_doors.svg" class="tab_icons">
+						</div>
 
-							<div class="tab_content">
+						<div class="tab_content">
 
-								<!-- <h3>Межкомнатные и входные двери</h3> -->
-								<h3>Межкомнатные</h3>
+							<h3>Двери</h3>
 
-								<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
+							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
 
-							</div>
 						</div>
 					</div>
-
-					<div class="tab_catalog_wrapper">
-						<div class="tab_catalog">
-
-							<div class="tab_icons_wrapper">
-								<img src="../img/ic_furniture.svg" class="tab_icons">
-							</div>
-
-							<div class="tab_content">
-
-								<h3>Мебель</h3>
-
-								<p class="tab_small_desc">Кухни, столы, стулья, кровати, шкафы, стенки</p>
-
-							</div>
-						</div>
-					</div>
-
-					<div class="tab_catalog_wrapper">
-						<div class="tab_catalog">
-
-							<div class="tab_icons_wrapper">
-								<img src="../img/ic_stairs.svg" class="tab_icons">
-							</div>
-
-							<div class="tab_content">
-
-								<h3>Лестницы</h3>
-
-								<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
-
-							</div>
-						</div>
-					</div>
-
 				</div>
+
+				<div class="tab_wrapper">
+					<div class="tab">
+
+						<div class="tab_icons_wrapper">
+							<img src="../img/ic_furniture.svg" class="tab_icons">
+						</div>
+
+						<div class="tab_content">
+
+							<h3>Мебель</h3>
+
+							<p class="tab_small_desc">Кухни, столы, стулья, кровати, шкафы, стенки</p>
+
+						</div>
+					</div>
+				</div>
+
+				<div class="tab_wrapper">
+					<div class="tab">
+
+						<div class="tab_icons_wrapper">
+							<img src="../img/ic_stairs.svg" class="tab_icons">
+						</div>
+
+						<div class="tab_content">
+
+							<h3>Лестницы</h3>
+
+							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
+
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
@@ -245,11 +242,11 @@
 				</div>
 
 				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-					<a href="#">Главная</a>
-					<a href="#">Каталог</a>
+					<a href="index.html">Главная</a>
+					<a href="catalog.html">Каталог</a>
 					<a href="#">Цены</a>
 					<a href="#">Статьи</a>
-					<a href="#">Контакты</a>
+					<a href="contacts.html">Контакты</a>
 				</nav>
 
 				<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
