--- a/app/contacts.html
+++ b/app/contacts.html
@@ -54,15 +54,13 @@
 </head>
 <body>
 
-	<div class="body_wrapper">
-
-		<div class="contacts_wrapper">
+	<div class="contacts_wrapper">
 
 		<header>
 			<div class="container">
 
 				<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 					</a>
 				</div>
 
@@ -142,8 +140,6 @@
     </div>
 
   </div>
-
-	</div>
 
   <script>var scr = {"scripts":[
     {"src" : "js/libs.min.js", "async" : false},
