--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 				<div class="container">
 
 					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-						<a href="#" class="logo">
+						<a href="index.html" class="logo">
 						</a>
 					</div>
 
@@ -450,11 +450,11 @@
 				</div>
 
 				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
-					<a href="#">Главная</a>
-					<a href="#">Каталог</a>
+					<a href="index.html">Главная</a>
+					<a href="catalog.html">Каталог</a>
 					<a href="#">Цены</a>
 					<a href="#">Статьи</a>
-					<a href="#">Контакты</a>
+					<a href="contacts.html">Контакты</a>
 				</nav>
 
 				<div class="social_icons_wrapper col-xs-12 col-sm-2 col-md-3">
